hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/php_lambda.php.exp
File "php_lambda.php", line 6, characters 14-44:
Expression trees do not support PHP lambdas. Consider using Hack lambdas `() ==> {}` instead. (Parsing[1002])
