hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/php_lambda.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  ExampleDsl`function () {
    return 1;
  }`;
}
